testsuite/lab2-testsuite/bad/fun_app_2_instead_of_1.cc
// 2 instead of 1 arguments

int main() {
	let int x = foo(1,2);
	return 0 ;
}

int foo(int y) {
 return y;
}

